gce-ingress/example/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: example
  name: example
spec:
  selector:
    matchLabels:
      run: example
  template:
    metadata:
      labels:
        run: example
    spec:
      containers:
      - image: nginx:1.13.5-alpine
        imagePullPolicy: IfNotPresent
        name: example
