gce-ingress/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: example
  name: example
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: example
  type: NodePort
