gce-ingress/example/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example
spec:
  backend:
    serviceName: example
    servicePort: 80
